gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/attributediagnostic_nogc.d
version https://git-lfs.github.com/spec/v1
oid sha256:623cb1180787fa0338972ba852361e70732f5cf6d8f39e43a4e12354ea67812a
size 2305
